<resources>
    <string name="app_name">Contacts Manager</string>
    <string name="add_contact">New Contact</string>
    <string name="no_contact">You have no contact</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="tel">Tel</string>
    <string name="mail">Email</string>
    <string name="about">About</string>
    <string name="address">Address</string>
    <string name="save_contact">Save</string>
    <string name="update_contact">Update</string>
    <string name="delete_contact">Delete</string>
    <string name="make_call_contact">Call</string>
    <string name="retry_call_contact">Retry</string>
    <string name="message_contact">Message</string>
    <string name="edit_contact">Edit</string>
    <string name="remove_contact">Remove</string>
    <string name="info_contact">Information</string>
    <string name="select_color">Select color</string>
    <string name="select_language">Select color</string>
    <string name="ok_button_label">Ok</string>
    <string name="no_button_label">No</string>
    <string name="cancel_button_label">Cancel</string>
    <string name="delete_all_title">Delete All</string>
    <string name="delete_all_msg">Are you sure you want to remove all the contacts ?</string>
    <string name="delete_row_title">Delete</string>
    <string name="delete_row_msg">Are you sure you want to remove</string>
    <string name="call_contact">Call</string>
    <string name="me">You</string>
    <string name="menu_change_language">Change Language</string>
    <string name="menu_header_color">Change Header Color</string>
    <string name="menu_delete_all">Delete All</string>
</resources>